Closed
Bug 1422584
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::dom::ClientSource::DocShellExecutionReady
Categories
(Core :: DOM: Core & HTML, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | --- | verified |
People
(Reporter: marcia, Assigned: bkelly)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1.00 KB,
patch
|
bkelly
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-a5f57119-40dc-48ec-bab3-f39620171202.
=============================================================
Seen while looking at nightly crash stats: http://bit.ly/2jGtG5i. Crashes started using 20171202100103. Possible regression range based on Build ID:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a21f4e2ce5186e2dc9ee411b07e9348866b4ef30&tochange=de1f7a92e8726bdd365d4bbc5e65eaa369fbc20a
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::ClientSource::DocShellExecutionReady dom/clients/manager/ClientSource.cpp:225
1 xul.dll nsDocShell::MaybeCreateInitialClientSource docshell/base/nsDocShell.cpp:3448
2 xul.dll nsDocShell::DoChannelLoad docshell/base/nsDocShell.cpp:11861
3 xul.dll nsDocShell::DoURILoad docshell/base/nsDocShell.cpp:11657
4 xul.dll nsDocShell::InternalLoad docshell/base/nsDocShell.cpp:10989
5 xul.dll nsDocShell::LoadURI docshell/base/nsDocShell.cpp:1623
6 xul.dll nsFrameLoader::ReallyStartLoadingInternal dom/base/nsFrameLoader.cpp:998
7 xul.dll nsDocument::MaybeInitializeFinalizeFrameLoaders dom/base/nsDocument.cpp:7324
8 xul.dll mozilla::dom::XULDocument::DoneWalking dom/xul/XULDocument.cpp:3036
9 xul.dll mozilla::dom::XULDocument::ResumeWalk dom/xul/XULDocument.cpp:2970
=============================================================
| Assignee | ||
Comment 2•8 years ago
|
||
I think we just need a nullptr check.
Assignee: nobody → bkelly
Status: NEW → ASSIGNED
Flags: needinfo?(bkelly)
| Assignee | ||
Comment 3•8 years ago
|
||
Andrea, this makes docshell handle the case where we fail to create an initial ClientSource. This can happen if the IPC actors are being torn down for shutdown, etc.
Attachment #8934199 -
Flags: review?(amarchesini)
Updated•8 years ago
|
Priority: -- → P2
Comment 4•8 years ago
|
||
Comment on attachment 8934199 [details] [diff] [review]
Handle nullptr ClientSource in nsDocShell::MaybeCreateInitialClientSource(). r=baku
Review of attachment 8934199 [details] [diff] [review]:
-----------------------------------------------------------------
::: docshell/base/nsDocShell.cpp
@@ +3440,5 @@
> mInitialClientSource =
> ClientManager::CreateSource(ClientType::Window,
> win->EventTargetFor(TaskCategory::Other),
> principal);
> + if (!mInitialClientSource) {
NS_WARN_IF ?
Attachment #8934199 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 5•8 years ago
|
||
Attachment #8934199 -
Attachment is obsolete: true
Attachment #8934599 -
Flags: review+
Pushed by bkelly@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e18c1ff30e40
Handle nullptr ClientSource in nsDocShell::MaybeCreateInitialClientSource(). r=baku
Comment 7•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Updated•8 years ago
|
Blocks: 1419536
status-firefox57:
--- → unaffected
status-firefox58:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Comment 8•8 years ago
|
||
No more crashes in nightly 59 since the patch landed.
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•