Bug 1422584 Handle nullptr ClientSource in nsDocShell::MaybeCreateInitialClientSource(). r=baku