docshell/base/nsDocShell.cpp
@@ -3442,6 +3442,9 @@ nsDocShell::MaybeCreateInitialClientSource(nsIPrincipal* aPrincipal)
     ClientManager::CreateSource(ClientType::Window,
                                 win->EventTargetFor(TaskCategory::Other),
                                 principal);
+  if (NS_WARN_IF(!mInitialClientSource)) {
+    return;
+  }
 
   // Mark the initial client as execution ready, but owned by the docshell.
   // If the client is actually used this will cause ClientSource to force
